# Arxiv_Paper_Coding_Agent--HKU_COMP7103C_Data_mining_Assignment

./: .gitignore  CONTRIBUTING.md  LICENSE  Prompt.txt  README.md  env.example  pyproject.toml  requirements.txt  run_agent.py  setup.py
.github/workflows/: ci.yml
docs/: __init__.py  agent_task_matrix.md  api.md  architecture.md  arxiv_cs_daily_spec.md  code_media_brief.md  quickstart.md  ui_ux_guidelines.md
examples/: __init__.py
src/: __init__.py  config.py  keys.py  llm_client.py  orchestrator.py
src/agents/: __init__.py  arxiv_template_coder.py  base.py  base_agent.py  coder.py  enhanced_planner.py  planner.py  reviewer.py  simple_coder.py  simple_planner.py  simple_reviewer.py
src/core/: __init__.py  api_pool.py  config.py  llm_client.py  memory.py  orchestrator.py  responses_api.py
src/memory/: state.py
src/tasks/: scheduler.py  task.py
src/templates/: modern_arxiv.html  script.js  style.css
src/tools/: __init__.py  arxiv.py  executor.py  fileio.py  templates.py  web.py
tests/: __init__.py  test_agents.py  test_tools.py
web/static/: styles.css
web/templates/: base.html  detail.html  index.html
