[project]
name = "research-agent"
version = "0.1.0"
description = "Multi-agent orchestration system for the COMP7103C research assignment"
readme = "README.md"
authors = [
  { name = "Research Automation Team" }
]
requires-python = ">=3.10"
dependencies = [
  "openai>=1.55.0",
  "anthropic>=0.40.0",
  "httpx>=0.27.2",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "rich>=13.7.1",
  "tenacity>=9.0.0",
  "jinja2>=3.1.4",
  "python-dotenv>=1.0.1",
  "networkx>=3.2.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "ruff>=0.6.4"
]

[project.scripts]
run-orchestrator = "src.orchestrator:main"
generate-arxiv = "scripts.generate_arxiv_daily:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

